Trying to fix clipboard icon visibility for IE.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,5 +67,6 @@ ul.errors {
 }
 
 img.svg-icon {
-  width: 14px;
+  max-width: 14px;
+  max-height: 14px;
 }
